allow the user via to configure Elisa not to rely on Baloo

allow users to workaround missing music files in Baloo index by
configuring Elisa not to rely only on it.

BUG: 417822